--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,15 +34,18 @@ dependencies:
     sdk: flutter
   flutter_mobx: ^2.2.0
   hive: ^2.2.3
-  mobx: ^2.2.1
+  hive_flutter: ^1.1.0
   
+  mobx: ^2.2.1
 
 dev_dependencies:
+  hive_generator: ^2.0.1
   build_runner: ^2.4.7
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
   mobx_codegen: ^2.4.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
